# RunbookQuery

./: .gitignore  README.md  pyproject.toml  stress_test.py
evaluation_results/: eval_report_20251225_131802.json  eval_report_20251225_131956.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Filters.jsx  ResultCard.jsx  ResultsList.jsx  SearchBar.jsx
frontend/src/hooks/: useSearch.js
sample_docs/: 503-errors.md  crashloopbackoff.md  grafana-dashboards.md  oomkilled.md  prometheus-alerting.md
src/runbook_query/: __init__.py  cli.py  config.py
src/runbook_query/api/: __init__.py  app.py  schemas.py  service.py
src/runbook_query/api/routes/: __init__.py  health.py  ingest.py  search.py
src/runbook_query/evaluation/: __init__.py  dataset.json  metrics.py  runner.py
src/runbook_query/indexing/: __init__.py  manager.py
src/runbook_query/ingestion/: __init__.py  chunker.py  parser.py  pipeline.py
src/runbook_query/ingestion/connectors/: __init__.py  base.py  github.py  markdown.py
src/runbook_query/models/: __init__.py  document.py  search.py
src/runbook_query/observability/: __init__.py  metrics.py
src/runbook_query/retrieval/: __init__.py  bm25.py  cache.py  hybrid.py  vector.py
src/runbook_query/storage/: __init__.py  database.py  repositories.py
